Code for formatting e2e nlg reference + seq2seq predictions to use with e2e nlg metric scripts Code for formatting e2e nlg reference + seq2seq predictions to use with VizSeq Small code for calculating lexical diversity (lex_diversity.py) Notebook for seq2seq with attention (no improvement in results over tf) Renamed utils.random -> utils.randm because of incompatibility

--- a/notebooks/init.ipynb
+++ b/notebooks/init.ipynb
@@ -100,7 +100,7 @@
     "from e2e_nlg.loader import E2ENLGDataLoader\n",
     "from utils.embeds import Seq2SeqEmbeddings\n",
     "from seq2seq import *\n",
-    "from utils import random"
+    "from utils import randm"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random.setReproducibility(42,True)\n",
+    "randm.setReproducibility(42,True)\n",
     "pd.set_option('display.max_colwidth', 1000)"
    ]
   },
