Refactored and removed irrelevant files

--- a/notebooks/init.ipynb
+++ b/notebooks/init.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook loads training and validation set in Fastai structures and gets embeddings for both input and output:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,22 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6723030821917808"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#dataset_path = \"/kaggle/input/e2e-dataset\"\n",
-    "#dataset_path = \"/floyd/input/e2e_nlg/\"\n",
-    "dataset_path= \"/Users/nadjet/Work/datasets/e2e-nlg\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fasttext_path = \"/Users/nadjet/Work/datasets/fasttext/cc.en.300.bin\""
+    "df = pd.read_csv(\"/Users/nadjet/Work/seq2seq/gitignore/dev_greedy.csv\",sep=\"\\t\")\n",
+    "df[df[\"rec\"]==1].shape[0]/df.shape[0]"
    ]
   },
   {
@@ -56,6 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dataset_path = \"/kaggle/input/e2e-dataset\"\n",
+    "#dataset_path = \"/floyd/input/e2e_nlg/\"\n",
+    "dataset_path= \"/Users/nadjet/Work/datasets/e2e-nlg\"\n",
+    "fasttext_path = \"/Users/nadjet/Work/datasets/fasttext/cc.en.300.bin\"\n",
+    "out_path = \"gitignore\"\n",
     "main_path = \".\""
    ]
   },
@@ -97,15 +110,16 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from e2e_nlg.loader import E2ENLGDataLoader\n",
-    "from utils.embeds import Seq2SeqEmbeddings\n",
+    "from utils.fastai_custom import *\n",
+    "from e2e_nlg.loading.loader import E2ENLGDataLoader\n",
+    "from utils.seq2seq_embeds import Seq2SeqEmbeddings\n",
     "from seq2seq import *\n",
     "from utils import randm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,24 +145,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-11-16 17:47:21,649 - root - INFO - Maximum size for inputs and outputs is: 42\n",
+      "2019-12-29 10:38:12,075 - root - INFO - Maximum size for inputs and outputs is: 95\n",
       "\n",
-      "2019-11-16 17:47:21,650 - root - INFO - Size of input vocabulary=56\n",
-      "2019-11-16 17:47:21,651 - root - INFO - Size of output vocabulary=1232\n",
-      "2019-11-16 17:47:21,652 - root - INFO - Seq2SeqDataBunch;\n",
+      "2019-12-29 10:38:13,948 - root - INFO - Size of input vocabulary=56\n",
+      "2019-12-29 10:38:13,949 - root - INFO - Size of output vocabulary=1216\n",
+      "2019-12-29 10:38:13,950 - root - INFO - Seq2SeqDataBunch;\n",
       "\n",
-      "Train: LabelList (40689 items)\n",
+      "Train: LabelList (42061 items)\n",
       "x: Seq2SeqTextList\n",
-      "xxbos xxmaj the xxup xxx , pub , customer rating 5 out of 5 , price range more than £ 30 , near xxup yyy,xxbos xxmaj the xxup xxx , pub , xxmaj english , price range cheap , near xxup yyy,xxbos xxmaj the xxup xxx , coffee shop , xxmaj japanese , customer rating low , price range less than £ 20 , family friendly yes , area riverside , near xxup yyy,xxbos xxmaj the xxup xxx , coffee shop , xxmaj french , price range £ 20 - 25 , area riverside , near the xxup yyy,xxbos xxup xxx , xxmaj french , customer rating high , area riverside , near the xxup yyy\n",
+      "xxbos xxmaj the xxup xxx , coffee shop , xxmaj italian , customer rating low , price range less than £ 20 , family friendly yes , area riverside , near xxup yyy,xxbos xxup xxx , coffee shop , xxmaj italian , customer rating average , area city centre , near xxup yyy,xxbos xxup xxx , xxmaj english , family friendly yes , area riverside , near the xxup yyy,xxbos xxmaj the xxup xxx , coffee shop , xxmaj french , customer rating low , price range less than £ 20 , family friendly no , near xxup yyy,xxbos xxup xxx , coffee shop , xxmaj french , customer rating 3 out of 5 , price range high , family friendly yes , area riverside\n",
       "y: TextList\n",
-      "xxbos xxmaj the xxup xxx pub near xxup yyy has a 5 star rating . xxmaj prices start at £ 30 .,xxbos xxmaj close to xxup yyy , xxmaj the xxup xxx pub serves delicious xxmaj xxunk xxmaj xxunk for the cheap price of £ 10 . 50 . xxmaj delicious xxmaj pub food .,xxbos xxmaj the xxup xxx is a low rated coffee shop near xxup yyy and the riverside that is family friendly and is less than £ 20 for xxmaj japanese food .,xxbos xxmaj located near xxmaj the xxup yyy is a xxmaj french xxmaj theme eatery and coffee shop called xxmaj the xxup xxx , with a price range at £ 20 - £ 25 it is in the riverside area .,xxbos xxmaj for luxurious xxmaj french food , the xxup xxx is located by the river next to xxmaj the xxup yyy .\n",
+      "xxbos xxmaj there is an inexpensive , family - friendly coffee shop near the river and xxup yyy . xxmaj it 's called xxmaj the xxup xxx and serves pasta .,xxbos xxmaj an xxmaj italian coffee shop with an average customer rating . xxup xxx is located near xxup yyy in the city centre .,xxbos xxmaj the xxup xxx is a family friendly xxmaj english restaurant in riverside near xxmaj the xxup yyy .,xxbos xxmaj the xxup xxx coffee shop has only a one star rating and does not xxunk to be family oriented . xxmaj they are located near xxup yyy .,xxbos xxup xxx is a coffee shop near the riverside . xxmaj they are family friendly and serve food . xxmaj they have a high price and have a 3 out of 5 star rating .\n",
       "Path: .;\n",
       "\n",
-      "Valid: LabelList (4378 items)\n",
+      "Valid: LabelList (4672 items)\n",
       "x: Seq2SeqTextList\n",
-      "xxbos xxup xxx , family friendly no , area city centre,xxbos xxup xxx , family friendly no , area city centre,xxbos xxup xxx , family friendly no , area city centre,xxbos xxup xxx , family friendly no , area city centre,xxbos xxup xxx , family friendly no , area city centre\n",
+      "xxbos xxup xxx , coffee shop , xxmaj chinese , customer rating 1 out of 5 , price range moderate , family friendly yes , area city centre,xxbos xxup xxx , coffee shop , xxmaj chinese , customer rating 5 out of 5 , family friendly no , area city centre,xxbos xxmaj the xxup xxx , customer rating average , family friendly yes,xxbos xxmaj the xxup xxx , coffee shop , xxmaj english , customer rating high , price range more than £ 30 , family friendly no , area city centre , near xxup yyy,xxbos xxup xxx , coffee shop , xxmaj english , customer rating low , price range less than £ 20 , family friendly yes , area city centre\n",
       "y: TextList\n",
-      "xxbos xxmaj there is a place in the city centre , xxup xxx , that is not family - friendly .,xxbos xxmaj in the city centre there is a venue name xxup xxx , this is not a family - friendly venue .,xxbos xxup xxx is not a family - friendly place , located in city centre .,xxbos xxup xxx is not a family - friendly xxunk and is located in the city centre .,xxbos xxup xxx is not a family - friendly place in the city centre .\n",
+      "xxbos xxup xxx coffee shop has xxmaj chinese food at a moderate price . xxmaj customers rate xxup xxx a 1 out of 5 . xxmaj it is in the city centre and is kid friendly .,xxbos xxup xxx is a coffee shop providing xxmaj chinese food xxmaj it is located in the city centre . xxmaj its customer rating is 5 out of 5 .,xxbos xxmaj the xxup xxx is an average family friendly place .,xxbos xxmaj the xxup xxx coffee shop is a coffee shop with a high customer rating which is situated in the city centre near the xxup yyy . xxmaj it serves xxmaj english food and the price range is above average . xxmaj it is not suitable for children .,xxbos xxup xxx is a family - friendly coffee shop that serves xxmaj english food in the city centre . xxmaj it has a price range of less than £ 20 and also has a low customer rating .\n",
       "Path: .;\n",
       "\n",
       "Test: None\n"
@@ -156,8 +170,8 @@
     }
    ],
    "source": [
-    "dl = E2ENLGDataLoader(dataset_path,\"trainset.csv\",\"devset.csv\")\n",
-    "dl.setDataAndMaxSize()\n",
+    "dl = E2ENLGDataLoader(dataset_path,\"trainset.csv\",\"testset_w_refs.csv\",percentile=100)\n",
+    "dl.setDataAndMaxSize(bs=32)\n",
     "dl.save_data()"
    ]
   },
@@ -206,11 +220,15 @@
       "xxxs\n",
       "clentele\n",
       "d'oeuvres\n",
-      "-stars\n",
-      "d'oeuvre\n",
-      "-priced\n",
       "yyyn\n",
-      "caféteria\n"
+      "d'oeuvre\n",
+      "caféteria\n",
+      "xxfake\n",
+      "xxfake\n",
+      "xxfake\n",
+      "xxfake\n",
+      "xxfake\n",
+      "xxfake\n"
      ]
     }
    ],
@@ -222,26 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-11-16 17:48:39,565 - root - INFO - Encoder embeddings saved to: ./enc_emb.pth\n",
-      "2019-11-16 17:48:39,566 - root - INFO - Encoder embeddings saved to: ./dec_emb.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nadjet/Work/seq2seq/seq2seq_venv/lib/python3.7/site-packages/torch/serialization.py:292: UserWarning: Couldn't retrieve source code for container of type Embedding. It won't be checked for correctness upon loading.\n",
-      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embs.save_embeddings()"
    ]
