Fixed folder paths

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "out_path = \"gitignore\"\n",
-    "dataset_path = \"/Users/nadjet/Work/datasets/e2e-nlg\""
+    "dataset_path = \"datasets/e2e-nlg\""
    ]
   },
   {
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "ref_file = os.path.join(out_path,\"devset.csv\")\n",
-    "out_path = \"/Users/nadjet/Downloads\""
+    "out_path = \"output\""
    ]
   },
   {
