--- a/notebooks/init.ipynb
+++ b/notebooks/init.ipynb
@@ -38,24 +38,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6723030821917808"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df = pd.read_csv(\"/Users/nadjet/Work/seq2seq/gitignore/dev_greedy.csv\",sep=\"\\t\")\n",
-    "df[df[\"rec\"]==1].shape[0]/df.shape[0]"
+    "We change working directory to access python package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "cwd = os.getcwd()\n",
+    "print(\"Working directory before change:\",cwd)\n",
+    "path = Path(cwd)\n",
+    "os.chdir(path.parent)\n",
+    "print(\"Working directory after change:\", os.getcwd())"
    ]
   },
   {
@@ -66,41 +67,10 @@
    "source": [
     "#dataset_path = \"/kaggle/input/e2e-dataset\"\n",
     "#dataset_path = \"/floyd/input/e2e_nlg/\"\n",
-    "dataset_path= \"/Users/nadjet/Work/datasets/e2e-nlg\"\n",
-    "fasttext_path = \"/Users/nadjet/Work/datasets/fasttext/cc.en.300.bin\"\n",
-    "out_path = \"gitignore\"\n",
+    "dataset_path= \"datasets/e2e-nlg\"\n",
+    "fasttext_path = \"datasets/fasttext/cc.en.300.bin\"\n",
+    "out_path = \"output\"\n",
     "main_path = \".\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We change working directory to access python package:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working directory before change: /Users/nadjet/Work/seq2seq/notebooks\n",
-      "Working directory after change: /Users/nadjet/Work/seq2seq\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "cwd = os.getcwd()\n",
-    "print(\"Working directory before change:\",cwd)\n",
-    "path = Path(cwd)\n",
-    "os.chdir(path.parent)\n",
-    "print(\"Working directory after change:\", os.getcwd())"
    ]
   },
   {
@@ -170,7 +140,7 @@
     }
    ],
    "source": [
-    "dl = E2ENLGDataLoader(dataset_path,\"trainset.csv\",\"testset_w_refs.csv\",percentile=100)\n",
+    "dl = E2ENLGDataLoader(dataset_path,\"trainset.csv\",\"devset.csv\",percentile=100)\n",
     "dl.setDataAndMaxSize(bs=32)\n",
     "dl.save_data()"
    ]
